--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/Abc
 spring.datasource.username=root
-spring.datasource.password=akansha
+spring.datasource.password=Satya@4498
 spring.jpa.show-sql=true
 logging.level.root=INFO
 logging.level.org.springframework=ERROR
